--- a/service/keysd/.goreleaser.linux.yml
+++ b/service/keysd/.goreleaser.linux.yml
@@ -9,6 +9,15 @@ builds:
       - amd64
       - 386
       # - arm
+  - id: keys
+    binary: keys
+    main: ../keys/main.go
+    goos:
+      - linux
+    goarch:
+      - amd64
+      - 386
+      # - arm  
 archives:
   - replacements:
       386: i386
