--- a/service/keysd/.goreleaser.yml
+++ b/service/keysd/.goreleaser.yml
@@ -16,6 +16,23 @@ builds:
         goarch: 386
     hooks:
       post: ../../scripts/codesign.sh {{ .Path }}
+  - id: keys
+    binary: keys
+    main: ../keys/main.go
+    env:
+      - CGO_ENABLED=1
+    goos:
+      - darwin
+      - windows
+    goarch:
+      - amd64
+      - 386
+    ignore:
+      - goos: darwin
+        goarch: 386
+    hooks:
+      post:
+        - ../../scripts/codesign.sh {{ .Path }}  
 archives:
   - replacements:
       386: i386
